Added many visual changes

--- a/estructura.html
+++ b/estructura.html
@@ -60,12 +60,12 @@
     </section>
   <section id="info" class="intern mt-0">
     <div id='emotionHeader'>
-        <div class="title">
-          <h2> Nos Emociona Transformar</h2>
-        </div>
-        <div class="imageDesc">
-        </div>
+      <div class="title">
+        <h2> Nos Emociona Transformar</h2>
       </div>
+      <div class="imageDesc">
+      </div>
+    </div>
     <article class="width800">
       <div class="descBig">
         Mediante técnicas lúdico-educativas: cuento, dibujos animados, psicodrama, juego, relato vivencial; facilitamos a niños y pre adolescentes la expresión de emociones, el auto- conocimiento, el manejo adecuado de conflictos y el reconocimiento y re significación de sus historias de vida.
@@ -82,24 +82,24 @@
         </thead>
         <tbody>
           <tr>
-            <td>Cuento</td>
-            <td>Lectura de historias que relatan en un lenguaje infantil, las vivencias de los niños en sus diferentes momentos evolutivos.</td>
+            <td>Cuento/Dibujo Animado</td>
+            <td>Historias que relatan en un lenguaje infantil, las vivencias de los niños en sus diferentes momentos evolutivos.</td>
             <td class="optional">A través de la identificación con los personajes, los niños pueden comprender, regular y hallar alternativas a sus conflictos internos.</td>
           </tr>
           <tr>
             <td>Psicodrama</td>
-            <td>Los niños actúan las historias relatadas en los cuentos, incluyendo otras acciones que deseen agregar.</td>
+            <td>Los niños actúan las historias relatadas en los cuentos/dibujos animados, incluyendo otras acciones que deseen agregar.</td>
             <td class="optional">El Psicodrama busca que, a través de la actuación, los niños proyecten su historia sin comprometerla.</td>
           </tr>
           <tr>
             <td>Juego</td>
-            <td>Actividades en casa, para que padres e hijos compartan las temáticas abordadas en los cuentos y psicodramas.</td>
+            <td>Actividades en casa para que padres e hijos compartan las temáticas abordadas en los cuentos/dibujos animados.</td>
             <td class="optional">El juego propicia la comunicación y la interacción, en un ambiente familiar, para la elaboración de situaciones y la consolidación de relaciones afectivas entre padres e hijos</td>
           </tr>
           <tr>
             <td>Relato vivencial</td>
             <td>Los niños expresan a través de la palabra las emociones y situaciones vividas.</td>
-            <td class="optional">El juego propicia la comunicación y la interacción, en un ambiente familiar, para la elaboración de situaciones y la consolidación de relaciones afectivas</td>
+            <td class="optional">El relato vivencial permite el aprendizaje y la elaboración de situaciones de conflicto y  la resignificación de experiencias.</td>
           </tr>
         </tbody>
       </table>
