--- a/formacion.html
+++ b/formacion.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/components/data-emotion.css">
+    <link rel="stylesheet" href="css/excited_to_transform.css">
     <link rel="stylesheet" href="css/formacion.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
@@ -58,44 +59,56 @@
       </div>
     </section>
   <section id="videos" class="intern">
+    <div id='emotionHeader'>
+      <div class="title">
+        <h2> Nos Emociona Transformar</h2>
+      </div>
+      <div class="imageDesc">
+      </div>
+    </div>
     <article class="internTopMsg">
       Entre todos podemos ayudar a transformar e impactar con alegría muchas vidas.
     </article>
   </section>
-  <section id="info" class="intern maxWidth">
+  <section id="info" class="intern maxWidth mb-5">
     <div class="textAndImg" style="margin-top:100px;">
-      <img src='img/pisoton/MAESTROS_Y_NIÑOS_PRIMERA_FOTO.JPG'/>
+      <img src='img/pisoton/MAESTROS_Y_NIÑOS_PRIMERA_FOTO.JPG'/>
       <article>
-        <p class="textAndImageTitle rightAlign">Formación</p>
-        <p class="desc">El proceso de crecimiento de los niños y niñas no depende solo de ellos, sino también de los adultos que los rodean, por lo cual no es posible pensar en un programa que apunte hacia su emocionalidad sin integrar a quienes los acompañan, por eso proponemos una formación que brinde un conocimiento que permita facilitar el adecuado desarrollo psicoafectivo de la infancia.</p>
+        <p class="textAndImageTitle rightAlign mb-4">Formación</p>
+        <p class="desc">Proponemos una formación que brinde un conocimiento que permita facilitar el adecuado desarrollo psicoafectivo de la infancia.</p>
       </article>
     </div>
     <div class="textAndText mt-md-5">
       <article>
-        <p class="textAndImageTitle">Diplomado en Desarrollo Psicoafectivo y Educación Emocional</p>
-        <p class="desc">Profesionales del área de la educación, ciencias de la salud, ciencias sociales y humanas. Maestros, agentes educativos y madres comunitarias.</br></br>
-          1. Crecimiento y desarrollo (Infancia)  </br>
-          2. Desarrollo Psicoafectivo  </br>
-          3. Yo también tengo una historia y hago parte de muchas historias</br>
-          4. Inducción para la implementación del Programa Pisotón</br>
-          5. Aprendizaje y técnicas lúdico-educativas</br>
-          6. Individuo y desarrollosocial</br>
-          7. Desarrollo humano y resolución de conflictos </br>
-          8. Protección y cuidado en la primera infancia</br>
-          9.Tutorías, Institucionalización y sostenimiento</p>
+        <p class="textAndImageTitle mb-4">Diplomado en Desarrollo Psicoafectivo y Educación Emocional</p>
+        <p class="desc">Dirigido a profesionales del área de la educación, ciencias de la salud, ciencias sociales y humanas. Maestros, agentes educativos y madres comunitarias.</br></br>
+          <ol>
+            <li>Crecimiento y desarrollo (Infancia)</li>
+            <li>Desarrollo Psicoafectivo</li>
+            <li>Yo también tengo una historia y hago parte de muchas historias</li> 
+            <li>Inducción para la implementación del Programa Pisotón </li> 
+            <li>Aprendizaje y técnicas lúdico-educativas </li>
+            <li>Individuo y desarrollosocial </li>
+            <li>Desarrollo humano y resolución de conflictos</li>
+            <li>Protección y cuidado en la primera infancia </li>
+            <li>Tutorías, Institucionalización y sostenimiento </li>
+          </ol>
       </article>
       <article>
-        <p class="textAndImageTitle rightAlign">Diplomado en Desarrollo Psicoafectivo y Recuperación Emocional</p>
+        <p class="textAndImageTitle rightAlign mb-4">Diplomado en Desarrollo Psicoafectivo y Recuperación Emocional</p>
         <p class="desc">
-          Profesionales de los equipos psicosociales.</br></br>
-          1. Desarrollo Psicoafectivo y Educación Emocional</br>
-          2. Yo también tengo una historia y hago parte de muchas historias</br>
-          3. Desarrollo, educación y recuperación psicoafectiva</br>
-          4. Lineamientos generales del programa de Desarrollo Psicoafectivo y Educación Emocional</br>
-          5. Protección y cuidado de la primera infancia</br>
-          6. Tutorías y Revisión de Casos especiales</br>
-          7. Desarrollo y Fortalecimiento de competencias psicosociales para la resolución de conflictos</br>
-          8. Tutorías finales</br>
+
+          Dirigido a profesionales de los equipos psicosociales.</br></br>
+          <ol>
+            <li>Desarrollo Psicoafectivo y Educación Emocional </li> 
+            <li>Yo también tengo una historia y hago parte de muchas historias</li>
+            <li>Desarrollo, educación y recuperación psicoafectiva </li>
+            <li>Lineamientos generales del programa de Desarrollo Psicoafectivo y Educación Emocional </li>
+            <li>Protección y cuidado de la primera infancia</li>
+            <li>Tutorías y Revisión de Casos especiales</li>
+            <li>Desarrollo y Fortalecimiento de competencias psicosociales para la resolución de conflictos </li>
+            <li>Tutorías finales</li>
+          </ol>
         </p>
       </article>
     </div>
@@ -111,10 +124,18 @@
     </article>
     <div class="quotesWrapper">
       <article>
-        <p class="quote1">“Pisotón me ha cambiado mucho como persona y profesional, yo antes era muy autoritaria y como malgeniada con los niños porque así había aprendido. Ahora al tener más oportunidad de escucharlos creo que los entiendo más, soy más suave y sensible con ellos y me va mucho mejor, disfruto más el trabajo con ellos y ellos me quieren más” - <br> <em> Elizabeth Cucaita Gómez, Agente educativa, Facatativá . </em> </p>
+        <div class="quote1">
+          <div class="mb-3"> “Pisotón me ha cambiado mucho como persona y profesional, yo antes era muy autoritaria y como malgeniada con los niños porque así había aprendido. Ahora al tener más oportunidad de escucharlos creo que los entiendo más, soy más suave y sensible con ellos y me va mucho mejor, disfruto más el trabajo con ellos y ellos me quieren más”.
+          </div>
+          <br><em> Elizabeth Cucaita Gómez, Agente educativa, Facatativá . </em> </div>
       </article>
       <article>
-        <p class="quote1">“Ser docente también se trata de aprender a ser mejores seres humanos, porque nosotros cometemos errores muchas veces y es importante que pidamos perdón y busquemos la manera de enmendar y solucionar el asunto unidos. Ser docentes es un trabajo grande, no solo en la parte académica, sino también en la humana”. <br> <em> Miryam Imbacoan, maestra, Villa Garzón, Putumayo .</em></p>
+        <div class="quote1">
+          <div class="mb-3">
+            “Ser docente también se trata de aprender a ser mejores seres humanos, porque nosotros cometemos errores muchas veces y es importante que pidamos perdón y busquemos la manera de enmendar y solucionar el asunto unidos. Ser docentes es un trabajo grande, no solo en la parte académica, sino también en la humana”. 
+          </div>
+          <br> <em> Miryam Imbacoan, maestra, Villa Garzón, Putumayo .</em>
+        </div>
       </article>
     </div>
   </section>
