--- a/investigacion.html
+++ b/investigacion.html
@@ -90,19 +90,8 @@
     </div>
     <article class="width800">
       <p class="desc">
-        La Investigación constituye un eje central en la labor científica y práctica del Programa
-        Pisotón, la medición y la evaluación permanente del impacto del Programa busca
-        contribuir a la prevención y la solución de problemáticas contextualizadas que afectan el
-        desarrollo integral de los niños, niñas, adolescentes, y sus familias.  En un esfuerzo
-        conjunto con la academia, el sector privado y público,  el Programa Pisotón desarrolla
-        acciones orientadas al diseño de proyectos de investigación, desarrollo e innovación,
-        participación en las  convocatorias nacionales e internacionales, producción de
-        conocimiento especializado y  participación en eventos de divulgación científica, espacios
-        académicos y políticos, donde el desarrollo psicoafectivo y la educación emocional son el
-        centro de discusión y accionar. El Programa Pisotón desde la investigación es una apuesta
-        que transciende de la ciencia a la práctica,  la construcción y transferencia del
-        conocimiento a la sociedad civil, es una oportunidad para aportar al bienestar y desarrollo
-        de nuestros niños, niñas y adolescentes.
+        La Investigación constituye un eje central en la labor científica y práctica del Programa Pisotón, la medición y la evaluación permanente del impacto del Programa busca contribuir a la prevención y la solución de problemáticas contextualizadas que afectan el desarrollo integral de los niños, niñas, adolescentes, y sus familias.  
+         Desde la investigación, Pisotón es una apuesta que trasciende de la ciencia a la práctica convirtiéndose en una oportunidad para aportar al bienestar y desarrollo de nuestros niños, niñas y adolescentes.
       </p>
     </article>
   </section>
