--- a/nos_emociona_transformar.html
+++ b/nos_emociona_transformar.html
@@ -74,7 +74,7 @@
       <div class="mapWrapper">
         <div class="hearts-reached my-2">
           <h2> Corazones que hemos tocado</h2>
-          <p>Es emocionante que, educando con amor, hemos ayudado a transformar e impactar cientos de vidas</p>
+          <p>Educando con amor, hemos ayudado a transformar e impactar cientos de vidas</p>
         </div>
         <img src="img/pisoton/NosEmociona-07.png">
       </div>
