--- a/programa.html
+++ b/programa.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/components/data-emotion.css">
+    <link rel="stylesheet" href="css/excited_to_transform.css">
     <link rel="stylesheet" href="css/programa.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
@@ -59,6 +60,14 @@
     </div>
   </section>
   <section id="videos" class="intern">
+    
+    <div id='emotionHeader'>
+      <div class="title">
+        <h2> Nos Emociona Transformar</h2>
+      </div>
+      <div class="imageDesc">
+      </div>
+    </div>
     <!--<h4>Para qué lo hacemos</h4>-->
     <article class="internTopMsg">
       Si miramos de cerca al niño, solo tenemos que guiar al adolescente y observar con satisfacción al adulto.
@@ -67,23 +76,25 @@
   <section id="info" class="intern maxWidth mb-5">
     <div class="textAndImg">
       <article>
-        <p class="textAndImageTitle">Primera</br> Infancia</p>
+        <p class="textAndImageTitle mb-4"> Programa para la Primera Infancia
         <div class="desc">Los niños son nuestro centro y su bienestar nuestro gran objetivo.
-          <strong>Temáticas</strong>
-          <ul>
-            <li>Vínculo afectivo</li>
-            <li>Alimentación y Afecto</li>
-            <li>Ansiedad de separación</li>
-            <li>Autonomía y Disciplina</li>
-            <li>Socialización</li>
-            <li>Iniciativa</li>
-            <li>Expresión de Emociones</li>
-            <li>Sexualidad</li>
-            <li>Desarrollo moral</li>
-            <li>Comunicación</li>
-            <li>Autoestima</li>
-          </ul>
-          <strong>¿A quién va dirigida?</strong>
+          <div class="mt-3">
+            <strong>Temáticas</strong>
+            <ul>
+              <li>Vínculo afectivo</li>
+              <li>Alimentación y Afecto</li>
+              <li>Ansiedad de separación</li>
+              <li>Autonomía y Disciplina</li>
+              <li>Socialización</li>
+              <li>Iniciativa</li>
+              <li>Expresión de Emociones</li>
+              <li>Sexualidad</li>
+              <li>Desarrollo moral</li>
+              <li>Comunicación</li>
+              <li>Autoestima</li>
+            </ul>
+            <strong>¿A quién va dirigido?</strong>
+          </div>
           Maestros, padres de familia, niños y niñas de 0 a 8 años.
         </div>
       </article>
@@ -92,41 +103,46 @@
     <div class="textAndImg">
       <img src='img/pisoton/recuperacion_.png'/>
       <article>
-        <p class="textAndImageTitle rightAlign">Preadolescentes</p>
+        <p class="textAndImageTitle rightAlign mb-4">Programa para la Adolescencia</p>
         <div class="desc">
-          <strong>Temáticas</strong>
-          <ul>
-            <li>Diligencia vs inferioridad</li>
-            <li>Identidad e inseguridad</li>
-            <li>Cambios físicos e identidad</li>
-            <li>Identidad y aceptación del grupo</li>
-            <li>Identidad e integración al grupo</li>
-            <li>Identificación</li>
-            <li>Autonomía y adaptación a la realidad</li>
-            <li>Ideal del Yo /logros del Yo</li>
-          </ul>
-          <strong>¿A quién va dirigida?</strong>
+          No es posible pensar en el bienestar de la adolescencia, si no cambiamos los antiguos lugares desde donde los escuchamos.
+          <div class="mt-3">
+            <strong>Temáticas</strong>
+            <ul>
+              <li>Diligencia vs inferioridad</li>
+              <li>Identidad e inseguridad</li>
+              <li>Cambios físicos e identidad</li>
+              <li>Identidad y aceptación del grupo</li>
+              <li>Identidad e integración al grupo</li>
+              <li>Identificación</li>
+              <li>Autonomía y adaptación a la realidad</li>
+              <li>Ideal del Yo /logros del Yo</li>
+            </ul>
+          </div>
+          <strong>¿A quién va dirigido?</strong>
           Maestros, padres de familia, niños y niñas de 9 a 12 años.
         </div>
       </article>
     </div>
     <div class="textAndImg">
       <article>
-        <p class="textAndImageTitle">Recuperación Emocional</p>
+        <p class="textAndImageTitle mb-4">Programa de Recuperación Psicoafectiva</p>
         <div class="desc">
           Aunque no podemos evitar las situaciones adversas de los niños y niñas, podemos minimizar sus efectos negativos y transformarlos.
-          <strong>Temáticas</strong>
-          <ul>
-            <li>Abandono</li>
-            <li>Agresión / Maltrato</li>
-            <li>Abuso</li>
-            <li>Desplazamiento</li>
-            <li>Compulsión a la repetición</li>
-            <li>Mecanismos de defensa</li>
-            <li>Resiliencia</li>
-            <li>Reconciliación</li>
-          </ul>
-          <strong>¿A quién va dirigida?</strong>
+          <div class="mt-3">
+            <strong>Temáticas</strong>
+            <ul>
+              <li>Abandono</li>
+              <li>Agresión / Maltrato</li>
+              <li>Abuso</li>
+              <li>Desplazamiento</li>
+              <li>Compulsión a la repetición</li>
+              <li>Mecanismos de defensa</li>
+              <li>Resiliencia</li>
+              <li>Reconciliación</li>
+            </ul>
+            <strong>¿A quién va dirigido?</strong>
+          </div>
           Maestros, padres de familia, niños y niñas de 4 a 9 años que han vivido interferencias en su desarrollo psicoafectivo.
         </div>
       </article>
