--- a/razones_y_corazones.html
+++ b/razones_y_corazones.html
@@ -56,13 +56,22 @@
       </div>
     </div>
     <article class="emotion-row my-md-5">
-      <p class="desc mr-lg-5 mb-5 mb-md-0 mr-lg-5 mr-md-5">"Jamás imaginamos que un personaje animal tomara alma o dejara huella en los niños y madres. Ellos expresaban que pisoton era amor, confianza, fé y esperanza; ese amigo con el cual platicar cuando se sientan tristes. Gracias Pisotón, por convertir estos sueños en luces esperanzadores." <br>  <strong> Benita Morales Barranco, Yucatán </strong> </p>
+      <div class="desc mr-lg-5 mb-5 mb-md-0 mr-lg-5 mr-md-5 pr-md-5">
+        <div class="flex flex-column">
+          <p>
+            "Jamás imaginamos que un personaje animal tomara alma o dejara huella en los niños y madres. Ellos expresaban que Pisotón era amor, confianza, fe y esperanza; ese amigo con el cual platicar cuando se sientan tristes. Gracias Pisotón, por convertir estos sueños en luces esperanzadoras." 
+          </p>
+          <br>  
+          <p class="mt-3"> <strong> Benita Morales Barranco, Yucatán </strong> 
+          </p>  
+        </div>
+      </div>
       <p class="quote1 mb-3">La única tarea de los niños es crecer fuertes, sanos, seguros de sí mismos, con felicidad, amor y estimulación adecuada.</p>
     </article>
     <div class="textAndImg">
       <img src='img/pisoton/FOTO_MITAD_1.JPG'/>
       <article>
-        <p class="desc">Movemos las mentes y los corazones de los niños de Colombia y Latinoamérica, y también de papás, mamás, cuidadores y educadores para facilitarles la comprensión de las emociones propias del desarrollo humano, ya que este conocimiento les permite generar espacios de comunicación en los que se potencializa el adecuado desarrollo psicoafectivo de la niñez. Impactamos de manera inmediata el presente de los niños y niñas, pero también su vida futura y por tanto, el progreso de la sociedad donde se desenvuelven.</p>
+        <p class="desc">Movemos las mentes y los corazones de los niños y niñas de Colombia y Latinoamérica, y también de papás, mamás, cuidadores y educadores para facilitarles la comprensión de las emociones propias del desarrollo humano, ya que este conocimiento les permite generar espacios de comunicación en los que se potencializa el adecuado desarrollo psicoafectivo de la niñez. Impactamos de manera inmediata el presente de los niños y niñas, pero también su vida futura y por tanto, el progreso de la sociedad donde se desenvuelven.</p>
       </article>
     </div>
     <div class="quotesWrapperBg">
@@ -74,14 +83,11 @@
           Creemos en la construcción del ser como un proceso integral donde lo psicoafectivo: el
           afecto y las emociones, son piezas clave en la estructuración de su personalidad e
           identidad y lo constituyen como ser social.
-          Comprender el desarrollo de los niños desde la integralidad implica un reconocimiento de
-          que este es un proceso sustentado en lo biológico, lo psicológico y la interacción con el
-          medio.</br></br>
+         </br></br>
           Conocer, comprender y aceptar las diferentes etapas del desarrollo psicoafectivo e
           integrar este conocimiento a la labor práctica, contribuye a que padres y maestros
           acompañen a los niños en el recorrido de cada uno de sus momentos evolutivos para
-          afrontar las expresiones reactivas normales de los niños de una manera adecuada.
-          8 razones para aprender sobre el desarrollo psicoafectivo</br></br>
+          afrontar las expresiones reactivas normales de los niños de una manera adecuada.</br></br>
         </p></p>
       </article>
     </div>
