Changes on admin and pisotón

--- a/estructura.html
+++ b/estructura.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/components/data-emotion.css">
+    <link rel="stylesheet" href="css/components/emotion-header.css">
     <link rel="stylesheet" href="css/excited_to_transform.css">
     <link rel="stylesheet" href="css/estructura.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
@@ -67,7 +68,10 @@
       </div>
     </div>
     <article class="width800">
-      <div class="descBig">
+      <div class="descBig mb-5">
+          Actuando desde la infancia lograremos impactar positivamente la salud mental del adulto
+      </div> 
+      <div class="descSmall">
         Mediante técnicas lúdico-educativas: cuento, dibujos animados, psicodrama, juego, relato vivencial; facilitamos a niños y pre adolescentes la expresión de emociones, el auto- conocimiento, el manejo adecuado de conflictos y el reconocimiento y re significación de sus historias de vida.
       </div>
     </article>
