--- a/pisoton.html
+++ b/pisoton.html
@@ -93,6 +93,16 @@
       <div class="timeline">
         <div class="swiper-container">
           <div class="swiper-wrapper">
+            <div class="swiper-slide" data-year="1990">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_1.png);" ></div>
+              <div class="swiper-slide-content">
+                <span class="timeline-year">1990</span>
+                <p class="timeline-text">
+                  La Dra. Ana Rita Russo inicia la investigación doctoral que sustenta el Programa de Desarrollo
+                  Psicoafectivo y Educación Emocional, con el propósito de contar con un programa que promocione
+                  la salud emocional y el desarrollo integral de la infancia. </p>
+              </div>
+            </div>
             <div class="swiper-slide" data-year="1997">
               <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_2.png);" ></div>
               <div class="swiper-slide-content">
@@ -301,10 +311,70 @@
               <div class="swiper-slide-content">
                   <span class="timeline-year">2017</span> 
                   <p class="timeline-text">
-                    Pisotón celebra veinte años transformando vidas.
+                      Con una alianza público-privada entre el ICBF y la Fundación Mario Santo Domingo se forman
+                      1.000 agentes educativos en 10 departamentos del país. 500 agentes educativos adscritos a los programas de primera infancia de la Alcaldía de
+                      Barranquilla culminan y se certifican en el diplomado de Pisotón.
+                      <br><br>
+                      Con la Fundación Mario Santo Domingo se realiza un trabajo de intervención y acompañamiento
+                      social a las familias de la comunidad de Villas de San Pablo.
+                      <br><br>
+                      Trabajamos de la mano, con nuevos aliados como War Child en Putumayo, para la formación de 55
+                      agentes educativos y la intervención a 1.000 niños y niñas.
+                      <br><br>
+                      Se celebraron los 20 años del Programa Pisotón.
                   </p>
               </div>
             </div>
+            <div class="swiper-slide" data-year="2018">
+                <div class="swiper-image"></div>
+                <div class="swiper-slide-content">
+                    <span class="timeline-year">2018</span> 
+                    <p class="timeline-text">
+                      La Fundación Entretejiendo, de Canacol Energy, es un nuevo aliado del Programa. Se ejecutó un
+                      proyecto para los municipios de Caimito, Sucre y Pueblo Nuevo Córdoba, en el que 203 maestros,
+                      agentes educativos y líderes comunitarios participaron en el proceso de formación, beneficiando a
+                      cerca de 880 niños, niñas y sus familias.
+                      <br><br>
+                      La Alcaldía de Barranquilla continua con su propósito de cualificar al talento humano que atiende a
+                      los niños y niñas de primera infancia, en esta oportunidad 652 agentes educativos culminan el
+                      diplomado de Pisotón.
+                      <br><br>
+                      En el marco de la alianza con el ICBF y el apoyo de la Fundación Mario Santo Domingo se
+                      cualificaron en desarrollo psicoafectivo y educación emocional 704 agentes educativos. En un
+                      segundo proceso, con aportes del contrato interadministrativo ICBF-ICETEX se forman 640 agentes
+                      educativos más.
+                      <br><br>
+                      Se presenta el libro de los 20 años del Programa y se lanza el primer cuento de la colección “La
+                      Familia Cuenta”.
+                    </p>
+                </div>
+              </div>
+              <div class="swiper-slide" data-year="2019">
+                  <div class="swiper-image"></div>
+                  <div class="swiper-slide-content">
+                      <span class="timeline-year">2019</span> 
+                      <p class="timeline-text">
+                          En alianza con la Fundación Saldarriaga Concha y la Fundación Luker, se crea el Programa Rehaser,
+                          resiliencia y habilidades para la construcción del Ser, para llevar a cabo en el municipio de Necoclí.
+                          Se realiza la aplicación del Programa de Recuperación Emocional a 59 niños, niñas y adolescentes.
+                          <br><br>
+                          En este año se descata el trabajo y la intervención directa con las familias en temas de pautas de
+                          crianza y cuidado y habilidades parentales, entre ellos:
+                          <br><br>
+                          - 101 familias de Caimito, Sucre y Pueblo Nuevo, Córdoba en alianza con la
+                          Fundación Entretejiendo.
+                          <br><br>
+                          - 189 familias de Repelón, Atlántico apoyados por Combarranquilla.
+                          <br><br>
+                          - Con el ICBF, además de la cualificación de 312 agentes educativos de 5
+                          departamentos del país, también se beneficiaron 150 familias con talleres
+                          formativos.
+                          <br><br>
+                          Pisotón se une a la iniciativa Uninorte Social para apoyar el desarrollo sostenible del municipio del
+                          Atlántico. 51 maestros de Santa Lucía y Manatí participaron en el diplomado de Pisotón.
+                      </p>
+                  </div>
+                </div>
           </div>
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
