--- a/programa.html
+++ b/programa.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/components/data-emotion.css">
     <link rel="stylesheet" href="css/excited_to_transform.css">
+    <link rel="stylesheet" href="css/components/emotion-header.css">
     <link rel="stylesheet" href="css/programa.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
@@ -62,9 +63,9 @@
   <section id="videos" class="intern">
     
     <div id='emotionHeader'>
-      <div class="title">
+      <a href="nos_emociona_transformar.html" class="title">
         <h2> Nos Emociona Transformar</h2>
-      </div>
+      </a>
       <div class="imageDesc">
       </div>
     </div>
