Visual changes to articles, working on articles

--- a/formacion.html
+++ b/formacion.html
@@ -73,7 +73,7 @@
   </section>
   <section id="info" class="intern maxWidth mb-5">
     <div class="textAndImg" style="margin-top:100px;">
-      <img src='img/pisoton/MAESTROS_Y_NIÑOS_PRIMERA_FOTO.JPG'/>
+      <img src='img/pisoton/MAESTROS_Y_NINOS_PRIMERA_FOTO.JPG'/>
       <article>
         <p class="textAndImageTitle rightAlign mb-4">Formación</p>
         <p class="desc">Proponemos una formación que brinde un conocimiento que permita facilitar el adecuado desarrollo psicoafectivo de la infancia.</p>
