Changes on Pisoton cuenta and articles query

--- a/pisoton.html
+++ b/pisoton.html
@@ -74,8 +74,8 @@
         <p class="articleText mb-4">Entérate de las últimas actividades e investigaciones del programa Pisotón.</p>
       </div>
       <div class="articles-links d-flex py-2 py-md-5">
-          <a class="mb-3 mr-2 mr-lg-5" href="articles.php"><img src="img/pisoton/elementos-10.png" alt="Nos emociona educar"></a>
-          <a class="mb-3" href="articles.php"><img src="img/pisoton/elementos-11.png" alt="Razones y corazones"></a>
+          <a class="mb-3 mr-2 mr-lg-5" href="pisoton_cuenta.php"><img src="img/pisoton/elementos-10.png" alt="Pisotón cuenta"></a>
+          <a class="mb-3" href="articles.php"><img src="img/pisoton/elementos-11.png" alt="Saberes compartidos"></a>
       </div>
   </section>
 
